flex-projeto/style.css
*{
  margin:0;
  padding:0;
  font-family: 'Open Sans', sans-serif;
}

ul{
  list-style: none;
  margin: 0;
  padding: 0;
}

ul li a{
  text-decoration: none;
}

div img{
  display: block;
  width: 100%;
}
.flex-container{
  display: flex;
  width: 90%;
  min-width: 320px;
  max-width: 992px;
  margin: auto;

}

header{
  background-color: #122A57;
  height: 100px;
  display: flex;
  align-items: center;
  color: #fff;
}

header .menu{
  justify-content: space-between;
}

header .list_menu{
  display: flex;
  max-width: 260px;
  width: 100%;
  justify-content: space-between;
  align-items: center;
}

.list_menu li a{
  color: #fff;
 
}

header .menu{
  justify-content: space-between;
}

.introduction{
  height: 100vh;
  align-items: center;
  justify-content: space-between;
}

.introduction .introduction_text{
  min-height: 200px;
}
.introduction .introduction_text h1{
  color:#122A57;
  font-size: 48px;
  margin-bottom: 10px;
}

.btn{
  background-color: #122A57;
  color: #fff;
  text-align: center;
  border-radius: 30px;
  width: 220px;
  height: 50px;
  line-height: 50px;
  text-decoration: none;
  display: block;
  margin: 10px 0;
}

.about{
  flex-direction: row-reverse;
  align-items: center;
  justify-content: space-between;
}

.about h2{
  font-size: 32px;
  color: #122A57;
  display: flex;
  margin-bottom: 20px;
}
.about h2::before{
  content: "";
  height: 50px;
  width: 5px;
  margin-right: 5px;
  background-color: #122A57;
  position: relative;
}

.about p{
  margin-bottom: 10px;
  width: 90%;
}

.about img{
  min-width: 420px;
}

.container{
  background-color: #122A57;
  width: 100%;
}

.services{
  flex-direction: column;
  padding-top: 50px;
  padding-bottom: 100px;
}

.services h2{
  color: #fff;
  font-size: 32px;
  margin-bottom: 20px;
}

.list_services{
  display: flex;
  justify-content: space-around;
  
}

.list_services .item__list_services{
  text-align: center;

  
}

.item__list_services a{
  width: 220px;
  background-color: #fff;
  border-radius: 30px;
  height: 50px;
  line-height: 50px;
  text-align: center;
  text-decoration: none;
  margin-top: 20px;
  padding: 10px;
  color: #122A57;
  font-size: 14px;
}

.item__list_services p{
  font-weight: 700;
  font-size: 20px;
  color: #fff;
  margin-top: 25px;
}

.item__list_services img{
  width: 80%;
  height: 160px;
  margin: auto;
}

.plans{
  flex-direction: column;
  min-height: 100vh;
  padding-top: 50px;
}
.plans h2{
  font-size: 32px;
}
.list_plans{
  display: flex;
  align-items: flex-end;
  justify-content:space-between ;
}
.item__list_plans{
  flex: 1;
  border: 6px solid #122A57;
  margin-right: 20px;
  padding: 10px;
  max-width: 240px;
 
}

.item__list_plans .btn{
  margin:20px auto;
  
}

.item__list_plans h3{
  font-size: 24px;
  display: flex;
  flex-direction: column;
  text-align: center;
  margin-top: 20px;
}

.item__list_plans h3::after{
  content: "";
  height: 3px;
  width: 100%;
  background-color: #122A57;
  position: relative;
  margin-top: 20px;
  margin-bottom: 10px;
}

.item__list_plans ul{
  padding: 10px 20px;
  display: flex;
  flex-direction: column;
  margin-bottom: 10px;
}
.item__list_plans ul li{
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
}
.item__list_plans ul li::before{
  content: "";
  width: 10px;
  height: 10px;
  background-color: #122A57;
  margin-right: 5px;
}

footer{
  background-color: #122A57;
  height: 70px;
  display: flex;
  align-items: center;
}

footer .footer{
  justify-content: space-between;
  color: #fff;
}

@media(max-width: 992px){
  .flex-container{
    flex-direction: column;
  }

  .introduction{
   flex-direction: column-reverse;
  }
  .introduction .introduction_text{
   width: 100%;
  }
  .about{
    flex-direction: column-reverse;
  }
  .about img{
    min-width: 320px;
    margin: auto;
  }
  .list_services{
    flex-direction: column;
  }
   .item__list_services img{
    width: 50%;
    margin: auto;
  }
  .list_plans{
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 20px ;
  }
  .list_plans .item__list_plans{
    max-width: 90%;
    margin: auto;
    width: 100%;
    margin-bottom: 20px;
  }
}

